force-app/main/default/objects/Product2/fields/Categor_a_veh_culo__c.field-meta.xml
<CustomField>
    <fullName>Categor_a_veh_culo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marca__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Categoria_Vehiculo</valueSetName>
    </valueSet>
</CustomField>