force-app/main/default/objects/Product2/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RMBAVARIAN</fullName>
                <label>Bavarian</label>
            </value>
            <value>
                <fullName>RMOTOBAI</fullName>
                <label>Otobai</label>
            </value>
            <value>
                <fullName>RMPEKING</fullName>
                <label>PEKING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>