force-app/main/default/objects/Product2/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <description>Familia que pertenece el vehículo, depende del campo Marca</description>
    <label>Familia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Grupo__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Familia</valueSetName>
    </valueSet>
</CustomField>