force-app/main/default/objects/Product2/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categor_a_veh_culo__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Categor_a</valueSetName>
    </valueSet>
</CustomField>