force-app/main/default/objects/Product2/fields/Modelo_De_Inter_s__c.field-meta.xml
<CustomField>
    <fullName>Modelo_De_Inter_s__c</fullName>
    <label>Modelo de Interés</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Familia__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Modelo_de_Interes2</valueSetName>
    </valueSet>
</CustomField>