force-app/main/default/objects/Product2/recordTypes/Producto_Red_Motors.recordType-meta.xml
<RecordType>
    <fullName>Producto_Red_Motors</fullName>
    <active>true</active>
    <description>Tipo de registro para todos los productos directamente con Red Motors</description>
    <label>Producto Red Motors</label>
</RecordType>